--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://biering.github.io/json.dance/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "format": "npx prettier . --check",
-    "format:fix": "npx prettier . --write"
+    "format:fix": "npx prettier . --write",
+    "deploy": "pnpm run build && wrangler pages deploy dist"
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
@@ -27,9 +25,9 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/js-yaml": "^4.0.9",
-    "gh-pages": "^6.3.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "terser": "^5.39.0"
+    "terser": "^5.39.0",
+    "wrangler": "^3.114.0"
   }
 }
