--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,3 @@
 name = "json-dance"
-main = "dist/index.html"
 compatibility_date = "2024-01-01"
-
-[build]
-command = "pnpm run build"
-output_dir = "dist"
+pages_build_output_dir = "dist"
